--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>D1screett meetingss, fhootooss</title>
+<title>D1scrett meetingss, fhootooss</title>
 <meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
@@ -22,7 +22,7 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-I offeer seeexuaaal seervicees and nakeeeed erootic masaages. Would you like to see my catalogue?</div>
+We offer night services all over the city, want to see our list of girls?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 Yes
@@ -34,14 +34,14 @@ No
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-ATENTION: Do you agree to respect the nakeeed w0meeen you see below? If you know someone, don't tell or spread rumors </div>
+Are you willing to respect the women you see on the next page? If you know someone, keep it a secret..... </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<script type='text/javascript'>document.write(unescape('%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%73%68%72%6C%63%2E%63%6F%6D%2F%54%47%77%45%6D%54%63%22%20%63%6C%61%73%73%3D%22%73%74%65%70%2D%62%74%6E%20%73%75%62%6D%69%74%2D%62%74%6E%20%74%72%2D%73%75%62%6D%69%74%2D%62%75%74%74%6F%6E%20%73%68%6F%77%6D%61%69%6C%22%3E%49%20%41%47%52%45%45%0A%3C%2F%61%3E'))</script>
-</div>
+<a href="https://shrlc.com/TGwEmTc" class="step-btn submit-btn tr-submit-button showmail">I agree
+</a>
 </div>
 <video autoplay muted loop id="VideoBg">
 <source src="   " type="video/mp4">
